# Rosetta-IO

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md
doc/: API_DOC.md  API_DOC_CN.md
example/: check_config_json.cpp  p2.json
examples/: net_helper.h
include/io/: channel.h  channel_decode.h  channel_encode.h  internal_channel.h
include/io/internal/: channel_interface.h  client.h  config.h  connection.h  cycle_buffer.h  ex_only_for_test.h  helper.h  io_channel_impl.h  logger.h  net_io.h  server.h  simple_buffer.h  simple_timer.h  socket.h  ssl_socket.h  stat.h
src/: channel.cpp  client.cpp  connection.cpp  io_channel_impl.cpp  net_io.cpp  server.cpp  socket.cpp  ssl_client.cpp  ssl_server.cpp  ssl_socket.cpp
src/_internal/: config.cpp  cycle_buffer.cpp  netutil.cpp  simple_timer.cpp  stat.cpp
